# environment_mlflow_client

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  lint_and_test.yml
Azure/pipelines/: build.yml  lint_and_test.yml
env_mlflow_client/: env_mlflow_client.py
environment_mlflow_client/: __init__.py  env_mlflow_client.py
tests/: conftest.py  test_custom_model_with_artifacts.py  test_env_mlflow_client.py
tests/model/: model_loader.py
