[tool.poetry]
name = "environment-mlflow-client"
version = "2.0.1"
description = "environment scoped mlflow client"
authors = ["Team Sigma <team.sigma@ns.nl>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "environment_mlflow_client"}]
homepage = "https://github.com/nederlandsespoorwegen/environment_mlflow_client"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
mlflow = "^2.1.0"

[tool.poetry.group.dev.dependencies]
psutil = "^5.9.4"
pytest = "^7.2.0"
black = "^23.1.0"
pylint = "^2.15.9"
llvmlite = "==0.38.0"  # Databricks runtime 12.1
numba = "==0.55.1"  # Databricks runtime 12.1
coverage = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
