[tool.poetry]
name = "environment-mlflow-client"
version = "2.0.2"
description = "environment scoped mlflow client"
authors = ["Team Sigma <team.sigma@ns.nl>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "environment_mlflow_client"}]
homepage = "https://github.com/nederlandsespoorwegen/environment_mlflow_client"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.1.0"

[tool.poetry.group.dev.dependencies]
psutil = "^5.9.4"
pytest = "^7.2.0"
black = "^23.1.0"
pylint = "^2.15.9"
llvmlite = "==0.39.1"  # Databricks runtime 14.3
numba = "==0.56.4"  # Databricks runtime 14.3
coverage = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
